<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/purchase_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="500dp"
                ads:layout_constraintBottom_toBottomOf="parent"
                ads:layout_constraintEnd_toEndOf="parent"
                ads:layout_constraintStart_toStartOf="parent"
                ads:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/subs_selection_layout"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:animateLayoutChanges="true"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    ads:layout_constraintEnd_toEndOf="parent"
                    ads:layout_constraintHeight_percent="0.21"
                    ads:layout_constraintStart_toStartOf="parent"
                    ads:layout_constraintTop_toTopOf="parent">

                    <RelativeLayout
                        android:id="@+id/monthly_premium"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_weight="0.28"
                        android:clickable="true"
                        android:focusable="true">

                        <TextView
                            android:id="@+id/save_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:duplicateParentState="true"
                            android:gravity="center"
                            android:background="@color/primary"
                            android:paddingBottom="2dp"
                            android:textAlignment="gravity"
                            android:textColor="@color/white"
                            android:textSize="14dp"
                            android:textStyle="bold"
                            android:visibility="invisible" />

                        <TextView
                            android:id="@+id/one_month_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/save_tv"
                            android:layout_centerHorizontal="true"
                            android:layout_marginLeft="2dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginRight="2dp"
                            android:gravity="center"
                            android:text="@string/one_month"
                            android:textAlignment="gravity"
                            android:textColor="@color/black"
                            android:textSize="14dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/one_month_price"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_below="@id/one_month_tv"
                            android:layout_centerHorizontal="true"
                            android:layout_marginLeft="4dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginRight="4dp"
                            android:gravity="center"
                            android:lines="1"
                            android:textAlignment="gravity"
                            android:textColor="@color/primary"
                            android:textSize="14dp"
                            android:textStyle="bold"
                            tools:text="loading..." />

                        <TextView
                            android:id="@+id/one_month_tv_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginStart="4dp"
                            android:layout_marginLeft="4dp"
                            android:layout_marginEnd="4dp"
                            android:layout_marginRight="4dp"
                            android:layout_marginBottom="24dp"
                            android:gravity="center"
                            android:textAlignment="gravity"
                            android:textColor="@color/black"
                            android:textSize="14dp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/yearly_premium"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_weight="0.28"
                        android:clickable="true"
                        android:focusable="true">

                        <TextView
                            android:id="@+id/save_yearly_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_marginTop="1dp"
                            android:background="@color/primary"
                            android:duplicateParentState="true"
                            android:gravity="center"
                            android:lines="1"
                            android:paddingLeft="2dp"
                            android:paddingRight="2dp"
                            android:paddingBottom="2dp"
                            android:textAlignment="gravity"
                            android:textColor="@color/white"
                            android:textSize="14dp"
                            android:textStyle="bold"
                            tools:text="Save 25%" />

                        <TextView
                            android:id="@+id/one_year_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/save_yearly_tv"
                            android:layout_centerHorizontal="true"
                            android:layout_marginLeft="2dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginRight="2dp"
                            android:gravity="center"
                            android:text="@string/one_year"
                            android:textAlignment="gravity"
                            android:textColor="@color/black"
                            android:textSize="14dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/one_year_price"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_below="@id/one_year_tv"
                            android:layout_centerHorizontal="true"
                            android:layout_marginLeft="4dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginRight="4dp"
                            android:gravity="center"
                            android:lines="1"
                            android:textAlignment="gravity"
                            android:textColor="@color/primary"
                            android:textSize="14dp"
                            android:textStyle="bold"
                            tools:text="loading..." />

                        <TextView
                            android:id="@+id/one_year_tv_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginStart="4dp"
                            android:layout_marginLeft="4dp"
                            android:layout_marginEnd="4dp"
                            android:layout_marginRight="4dp"
                            android:layout_marginBottom="24dp"
                            android:gravity="center"
                            android:textAlignment="gravity"
                            android:textColor="@color/black"
                            android:textSize="14dp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/lifetime_premium"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.28"
                        android:clickable="true"
                        android:focusable="true">

                        <TextView
                            android:id="@+id/save_tv_lifetime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:background="@color/primary"
                            android:duplicateParentState="true"
                            android:gravity="center"
                            android:paddingBottom="2dp"
                            android:textAlignment="gravity"
                            android:textColor="@color/white"
                            android:textSize="14dp"
                            android:textStyle="bold"
                            android:visibility="invisible" />

                        <TextView
                            android:id="@+id/lifetime_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/save_tv_lifetime"
                            android:layout_centerHorizontal="true"
                            android:layout_marginLeft="2dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginRight="2dp"
                            android:gravity="center"
                            android:text="@string/lifetime_purchase"
                            android:textAlignment="gravity"
                            android:textColor="@color/black"
                            android:textSize="14dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/lifetime_price"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_below="@id/lifetime_tv"
                            android:layout_centerHorizontal="true"
                            android:layout_marginLeft="4dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginRight="4dp"
                            android:gravity="center"
                            android:lines="1"
                            android:textAlignment="gravity"
                            android:textColor="@color/black"
                            android:textSize="14dp"
                            android:textStyle="bold"
                            tools:text="loading..." />

                        <TextView
                            android:id="@+id/lifetime_desc_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginStart="4dp"
                            android:layout_marginLeft="4dp"
                            android:layout_marginEnd="4dp"
                            android:layout_marginRight="4dp"
                            android:layout_marginBottom="24dp"
                            android:gravity="center"
                            android:lines="2"
                            android:text="@string/pay_once_access_forever"
                            android:textAlignment="gravity"
                            android:textColor="@color/black"
                            android:textSize="12dp"
                            android:visibility="gone" />
                    </RelativeLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/trial_premium_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/trial_days"
                    android:textColor="#767676"
                    android:textStyle="bold"
                    ads:layout_constraintEnd_toEndOf="parent"
                    ads:layout_constraintStart_toStartOf="parent"
                    ads:layout_constraintTop_toBottomOf="@id/subs_selection_layout" />

                <TextView
                    android:id="@+id/regular_price_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/regular_price"
                    android:textColor="#767676"
                    android:textSize="12sp"
                    ads:layout_constraintEnd_toEndOf="parent"
                    ads:layout_constraintStart_toStartOf="parent"
                    ads:layout_constraintTop_toBottomOf="@id/trial_premium_tv" />

                <Button
                    android:id="@+id/btn_subscribe_now"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginBottom="10dp"
                    android:clickable="true"
                    android:text="@string/subscribe_now"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14dp"
                    ads:layout_constraintTop_toBottomOf="@id/regular_price_tv" />

                <TextView
                    android:id="@+id/no_thanks_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:padding="4dp"
                    android:text="@string/continue_ads"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    ads:layout_constraintEnd_toEndOf="parent"
                    ads:layout_constraintStart_toStartOf="parent"
                    ads:layout_constraintTop_toBottomOf="@id/btn_subscribe_now" />

            </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>